--- a/index.html
+++ b/index.html
@@ -2,102 +2,94 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Каталог кроссовок</title>
-  <link rel="stylesheet" href="style.css?v=20260108-1">
+  <meta name="description" content="Каталог кроссовок с фильтрами и размерами EU (CM), фото из Google Drive." />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header class="header">
     <div class="brand">
-      <div class="logo" aria-hidden="true">👟</div>
-      <div class="brand-text">
-        <div class="h1">Каталог кроссовок</div>
-        <div class="sub">Фото 1–8 · EU + CM</div>
+      <div class="logo">👟</div>
+      <div>
+        <div class="brand__title">Каталог кроссовок</div>
+        <div class="brand__sub">Фото 1–8 · EU + CM</div>
       </div>
     </div>
 
-    <div class="header-actions">
-      <button class="btn btn-ghost" id="filtersBtn" type="button">Фильтры</button>
-      <button class="btn" id="refreshBtn" type="button">Обновить</button>
+    <div class="actions">
+      <a class="pill" id="openSheet" href="#" target="_blank" rel="noreferrer">Таблица</a>
+      <button class="pill pill--ghost" id="refreshBtn" title="Перезагрузить данные">Обновить</button>
     </div>
   </header>
 
-  <!-- Фильтры -->
-  <section class="panel" id="filtersPanel" aria-label="Фильтры">
-    <div class="panel-head">
-      <div class="panel-title">Фильтры</div>
-      <button class="btn btn-ghost" id="filtersClose" type="button">Скрыть</button>
+  <section class="controls">
+    <div class="control control--search">
+      <label class="label" for="q">Поиск</label>
+      <input id="q" class="input" placeholder="Nike Dunk, Samba, код NK-DUNK-023…" autocomplete="off" />
     </div>
 
-    <div class="controls">
-      <div class="control">
-        <div class="label">Поиск</div>
-        <input class="input" id="q" type="search" placeholder="Nike Dunk, Samba, код..." autocomplete="off" />
-      </div>
+    <div class="control">
+      <label class="label" for="sex">Пол</label>
+      <select id="sex" class="select">
+        <option value="">Все</option>
+        <option value="M">Мужские</option>
+        <option value="W">Женские</option>
+        <option value="Z">Зимние</option>
+      </select>
+    </div>
 
-      <div class="control">
-        <div class="label">Пол</div>
-        <select class="select" id="sex">
-          <option value="">Все</option>
-          <option value="Мужские">Мужские</option>
-          <option value="Женские">Женские</option>
-          <option value="Унисекс">Унисекс</option>
-        </select>
-      </div>
+    <div class="control">
+      <label class="label" for="brand">Бренд</label>
+      <select id="brand" class="select">
+        <option value="">Все</option>
+      </select>
+    </div>
 
-      <div class="control">
-        <div class="label">Бренд</div>
-        <select class="select" id="brand">
-          <option value="">Все</option>
-        </select>
-      </div>
+    <div class="control">
+      <label class="label" for="size">Размер (EU)</label>
+      <select id="size" class="select">
+        <option value="">Все</option>
+      </select>
+    </div>
 
-      <div class="control">
-        <div class="label">Размер (EU)</div>
-        <select class="select" id="size">
-          <option value="">Все</option>
-        </select>
-      </div>
+    <div class="control">
+      <label class="label" for="status">Наличие</label>
+      <select id="status" class="select">
+        <option value="">Все</option>
+        <option value="in_stock">В наличии</option>
+        <option value="preorder">Под заказ</option>
+        <option value="sold_out">Нет</option>
+      </select>
+    </div>
 
-      <div class="control">
-        <div class="label">Наличие</div>
-        <select class="select" id="status">
-          <option value="">Все</option>
-          <option value="В наличии">В наличии</option>
-          <option value="Нет">Нет</option>
-        </select>
-      </div>
-
-      <div class="control">
-        <div class="label">Сортировка</div>
-        <select class="select" id="sort">
-          <option value="rel">По релевантности</option>
-          <option value="price_asc">Цена ↑</option>
-          <option value="price_desc">Цена ↓</option>
-        </select>
-      </div>
+    <div class="control">
+      <label class="label" for="sort">Сортировка</label>
+      <select id="sort" class="select">
+        <option value="relevance">По релевантности</option>
+        <option value="price_asc">Цена ↑</option>
+        <option value="price_desc">Цена ↓</option>
+        <option value="brand_asc">Бренд A→Z</option>
+        <option value="brand_desc">Бренд Z→A</option>
+      </select>
     </div>
   </section>
 
-  <!-- Промокод -->
-  <section class="panel promo">
-    <div class="promo-title">Промокод для подписчиков</div>
-    <div class="promo-sub">Подписка не обязательна, но даёт скидки и доступ к кодам недели.</div>
-    <div class="promo-row">
-      <input class="input promo-input" id="promoInput" type="text" placeholder="Промокод (например ROOM300)" autocomplete="off" />
-      <button class="btn" id="promoApply" type="button">Применить</button>
-      <button class="btn btn-ghost" id="promoReset" type="button">Сбросить</button>
-      <a class="btn promo-tg" id="promoTg" href="#" target="_blank" rel="noopener">Забрать код в Telegram</a>
+  <section class="meta" id="meta"></section>
+
+  <main class="grid" id="grid">
+    <div class="skeleton">Загрузка каталога…</div>
+  </main>
+  <div id="filtersBackdrop" class="filters-backdrop" aria-hidden="true"></div>
+
+
+  <footer class="footer">
+    <div class="footer__hint">
+      <b>Фото:</b> в таблице указывай <code>photo_1..photo_8</code> (прямые ссылки Drive).<br>
+      <b>Обновления:</b> меняешь Google Sheets → жмёшь «Обновить».
     </div>
-    <div class="promo-note" id="promoNote"></div>
-  </section>
+  </footer>
 
-  <div class="meta" id="meta"></div>
-
-  <main class="grid" id="grid" aria-live="polite"></main>
-
-  <button class="open-sheet" id="openSheet" type="button" title="Открыть таблицу">Открыть таблицу</button>
-
-  <script src="app.js?v=20260108-1" defer></script>
+  <script src="app.js"></script>
 </body>
 </html>
