--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Каталог кроссовок</title>
   <meta name="description" content="Каталог кроссовок с фильтрами и размерами EU (CM), фото из Google Drive." />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css?v=20260109_1" />
 </head>
 <body>
   <header class="header">
@@ -18,12 +18,19 @@
     </div>
 
     <div class="actions">
+      <button id="filtersToggle" class="pill pill--ghost pill--filters" type="button" aria-expanded="false">Фильтры</button>
+      
       <a class="pill" id="openSheet" href="#" target="_blank" rel="noreferrer">Таблица</a>
       <button class="pill pill--ghost" id="refreshBtn" title="Перезагрузить данные">Обновить</button>
     </div>
   </header>
 
   <section class="controls">
+    <div class="controls__mobilebar">
+      <div class="controls__mobiletitle">Фильтры</div>
+      <button id="filtersClose" class="pill pill--ghost" type="button">Скрыть</button>
+    </div>
+
     <div class="control control--search">
       <label class="label" for="q">Поиск</label>
       <input id="q" class="input" placeholder="Nike Dunk, Samba, код NK-DUNK-023…" autocomplete="off" />
@@ -80,8 +87,6 @@
   <main class="grid" id="grid">
     <div class="skeleton">Загрузка каталога…</div>
   </main>
-  <div id="filtersBackdrop" class="filters-backdrop" aria-hidden="true"></div>
-
 
   <footer class="footer">
     <div class="footer__hint">
@@ -90,6 +95,6 @@
     </div>
   </footer>
 
-  <script src="app.js"></script>
+  <script src="app.js?v=20260109_1"></script>
 </body>
 </html>
